// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Open Composer CLI Component Snapshots ComposerApp renders correctly 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                   🎼 Open Composer CLI v0.0.0                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌────────────────────────────┐┌──────────────────────────────────────┐┌────────────────────────────┐
│                            ││                                      ││                            │
│ 📂 Workspaces              ││ 💬 Chat Interface                    ││ 📝 Code Editor             │
│                            ││                                      ││                            │
│ ● main                     ││ 🎼 composer 10:00                    ││ ┌──────────────────────┐   │
│                            ││  Welcome to Open Composer CLI! What  ││ │                      │   │
│                            ││ would you like to build?             ││ │                      │   │
│ 🌿 Branches                ││                                      ││ │   No file selected   │   │
│                            ││                                      ││ │                      │   │
│ ● main                     ││                                      ││ │                      │   │
│ + New worktree             ││                                      ││ └──────────────────────┘   │
│                            ││                                      ││                            │
│                            ││                                      ││ 🔧 File Tree               │
│ 🤖 Agents                  ││                                      ││                            │
│                            ││                                      ││ 📁 src/                    │
│ ● claude-code              ││ ┌──────────────────────────────────┐ ││   📄 index.ts              │
│ ○ codex-nation             ││ │💭 _                              │ ││   📁 components/           │
│ ○ cursor-agent             ││ └──────────────────────────────────┘ ││     📄 ComposerApp.tsx     │
│                            ││ Type your message and press Enter... ││     📄 ChatInterface.tsx   │
│                            ││                                      ││                            │
└────────────────────────────┘└──────────────────────────────────────┘└────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Ready                                                                               Ctrl+C to exit│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Open Composer CLI Component Snapshots ChatInterface renders correctly with messages 1`] = `
"
 💬 Chat Interface

 🤖 claude-code 10:00
  Hello, how can I help you?

 👤 You 10:01
  I need help with my code


 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │💭 _                                                                                            │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
 Type your message and press Enter...
"
`;

exports[`Open Composer CLI Component Snapshots Sidebar renders correctly with worktrees 1`] = `
"
 📂 Workspaces

 ● main
 ○ feature-1


 🌿 Branches

 ● main
 + New worktree


 🤖 Agents

 ● claude-code
 ○ codex-nation
 ○ cursor-agent
"
`;

exports[`Open Composer CLI Component Snapshots CodeEditor renders correctly with file 1`] = `
"
 📝 Code Editor

 📄 src/index.ts

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                                                                │
 │ Code content will appear here...                                                               │
 │                                                                                                │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

 🔧 File Tree

 📁 src/
   📄 index.ts
   📁 components/
     📄 ComposerApp.tsx
     📄 ChatInterface.tsx
"
`;

exports[`Open Composer CLI Component Snapshots CodeEditor renders correctly without file 1`] = `
"
 📝 Code Editor

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                                                                │
 │                                                                                                │
 │                                        No file selected                                        │
 │                                                                                                │
 │                                                                                                │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

 🔧 File Tree

 📁 src/
   📄 index.ts
   📁 components/
     📄 ComposerApp.tsx
     📄 ChatInterface.tsx
"
`;

exports[`Open Composer CLI Component Snapshots Layout renders correctly 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                   🎼 Open Composer CLI v0.0.0                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Test content
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Ready                                                                               Ctrl+C to exit│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Open Composer CLI Component Snapshots TelemetryConsentPrompt renders correctly 1`] = `
"

  🔒 Open Composer - Privacy Notice

  Open Composer respects your privacy and is committed to protecting your data.


  📊 Telemetry Collection (Optional)


  We can collect anonymous usage statistics to help improve Open Composer.


  This includes command usage, error reports, and performance metrics.


  All data is anonymized and cannot be used to identify you.


  You can change this setting anytime with: open-composer telemetry disable



  Enable telemetry collection?

  Use arrow keys to select, Enter to confirm, Esc to skip


  ● Yes, enable telemetry  ○ No, keep disabled

"
`;

exports[`Open Composer CLI Component Snapshots GitWorktreeCreatePrompt renders correctly 1`] = `
"

  🚀 Create Git Worktree

  Create a new git worktree with interactive configuration.



  Configuration:

  Path:Enter worktree path *_
  Ref:Optional commit/branch ref
  Branch:Optional branch name


  Options:

  [○] Force (F)
  [○] Detach (D)
  [○] No Checkout (N)
  [○] Branch Force (B)


  Tab/Shift+Tab: Navigate • Enter: Next/Submit • ↑/↓: Toggle options • Esc: Cancel

  ⚠️  Path is required

"
`;
